--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -1,1 +1,37 @@
-<p>site works!</p>
+<!-- <form [formGroup]="f" (ngSubmit)="onSubmit(f.value)">
+    <input type="text" required id="input" ngModel>
+    <button class="button" type="submit">Purchase</button>
+ </form> -->
+
+ <mat-card [style.backgroundColor]="'#000000'">
+    <mat-toolbar [style.backgroundColor]="'rgba(255, 255, 255, 0)'">
+        <span> Roombaaa </span>
+    </mat-toolbar>
+</mat-card>
+
+
+
+ <br>
+
+<mat-card [style.backgroundColor]="'rgba(173, 173, 173, 0.21)'">
+	<form id="submit-form">
+		<div class="grid">
+			 <!-- Username -->
+				<input #string type="text" class="form-control" id="string" name="string" placeholder="what should I say?">
+		</div>
+		<hr>
+		<!-- Login Button -->
+		<div class="form-group"> 
+			<button mat-raised-button color="accent" type="submit" class="btn btn-primary" (click)='submit(string.value);'>
+				Submit
+			</button>
+		</div>
+		
+	</form>
+</mat-card>
+
+<ul>
+    <li *ngFor="let string of strings">
+        <a class="button>{{string.text}}"></a>
+    </li>
+</ul>
