--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -10,7 +10,7 @@
 	<form id="submit-form">
 		<div class="grid">
 				<input #string type="text" class="form-control" id="string" name="string" placeholder="what should I say?">
-				<button mat-raised-button color="accent" type="submit" class="btn btn-primary" (click)='submit(string.value);'>
+				<button mat-raised-button color="accent" type="button" class="btn btn-primary" (click)='submit(string.value);'>
 					Submit
 				</button>
 		</div>
@@ -19,7 +19,7 @@
 		
 		<ul>
 			<li *ngFor="let string of strings">
-				<a class="button>{{string.text}}"></a>
+				{{string.text}}
 			</li>
 		</ul>
 </mat-card>
