--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -1,6 +1,6 @@
  <mat-card [style.backgroundColor]="'#000000'">
     <mat-toolbar [style.backgroundColor]="'rgba(255, 255, 255, 0)'">
-        <span> Roombaaa </span>
+        <span> bitly link </span>
     </mat-toolbar>
 </mat-card>
 
@@ -17,11 +17,13 @@
 	</form>
 		<hr>
 		
-		<ul>
-			<li *ngFor="let string of strings">
-				{{string.text}}
-			</li>
-		</ul>
+		<mat-card class="textCards" *ngFor="let string of strings[0]">
+			{{string.text}}
+		</mat-card>
+
+		<mat-card class="textCards" *ngFor="let string of strings.slice(1,)">
+			{{string.text}}
+		</mat-card>
 </mat-card>
 
 
