--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -1,4 +1,4 @@
- <mat-card [style.backgroundColor]="'#000000'">
+ <mat-card [style.backgroundColor]="'rgba(255, 255, 255, 0)'">
     <mat-toolbar [style.backgroundColor]="'rgba(255, 255, 255, 0)'">
         <span> bitly link </span>
     </mat-toolbar>
