--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -21,7 +21,7 @@
 			<mat-card class="textCards" id="first">
 				{{strings[0].text}}
 			</mat-card>
-		</NgIf>
+		</div>
 
 		<mat-card class="textCards" *ngFor="let string of strings | slice:1">
 			{{string.text}}
