--- a/src/app/site/site.component.html
+++ b/src/app/site/site.component.html
@@ -1,6 +1,6 @@
  <mat-card [style.backgroundColor]="'rgba(255, 255, 255, 0)'">
     <mat-toolbar [style.backgroundColor]="'rgba(255, 255, 255, 0)'">
-        <span> http://tiny.cc/roombaaa </span>
+        <span id='tiny-link'> http://tiny.cc/roombaaa </span>
     </mat-toolbar>
 </mat-card>
 
